[project]
name = "ytee"
version = "0.1.4"
description = "A minimal CLI for uploading videos to YouTube — single files or entire directories, powered by the YouTube Data API v3."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.195.0",
    "google-auth-oauthlib>=1.3.1",
    "pathlib>=1.0.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]
[project.scripts]
ytee="ytee.cli:app"